@@ -93,7 +93,7 @@ function getFaasData (context, faasId, isColdStart, faasTriggerType, requestId) 
 
 function setGenericData (trans, event, context, faasId, isColdStart) {
   trans.type = 'request'
-  trans.name = context.functionName
+  trans.setDefaultName(context.functionName)
 
   trans.setFaas(getFaasData(context, faasId, isColdStart, 'other'))
 
@@ -138,7 +138,7 @@ function setApiGatewayData (agent, trans, event, context, faasId, isColdStart) {
     }
   }
   trans.type = 'request'
-  trans.name = name
+  trans.setDefaultName(name)
 
   trans.setFaas(getFaasData(context, faasId, isColdStart,
     'http', requestContext.requestId))
@@ -176,7 +176,7 @@ function setSqsData (agent, trans, event, context, faasId, isColdStart) {
   const queueName = arnParts[5]
   const accountId = arnParts[4]
 
-  trans.name = `RECEIVE ${queueName}`
+  trans.setDefaultName(`RECEIVE ${queueName}`)
   trans.type = 'messaging'
 
   const serviceContext = {
@@ -217,7 +217,7 @@ function setSnsData (agent, trans, event, context, faasId, isColdStart) {
   const accountId = arnParts[4]
   const region = arnParts[3]
 
-  trans.name = `RECEIVE ${topicName}`
+  trans.setDefaultName(`RECEIVE ${topicName}`)
   trans.type = 'messaging'
 
   const serviceContext = {
@@ -252,7 +252,7 @@ function setS3SingleData (trans, event, context, faasId, isColdStart) {
   trans.setFaas(getFaasData(context, faasId, isColdStart, 'datasource',
     record.responseElements && record.responseElements['x-amz-request-id']))
 
-  trans.name = `${record && record.eventName} ${record && record.s3 && record.s3.bucket && record.s3.bucket.name}`
+  trans.setDefaultName(`${record && record.eventName} ${record && record.s3 && record.s3.bucket && record.s3.bucket.name}`)
   trans.type = 'request'
 
   const serviceContext = {
