@@ -45,6 +45,10 @@ Notes:
 [float]
 ===== Bug fixes
 
+- Fix an issue where the transaction `name` for a trace of a Lambda function
+  implementing a GraphQL server (e.g. via https://www.apollographql.com/docs/apollo-server/deployment/lambda/[apollo-server-lambda])
+  would not get the GraphQL-specific naming. ({issues}2832[#2832])
+
 [float]
 ===== Chores
 
